Update dev-document.md